<resources>
    <!-- Nombre de la Aplicacion -->
    <string name="app_name">Proyecto DAM</string>

    <!-- Titulo de las Activitys -->
    <string name="title_activity_menu_desplegable">MenuDesplegable</string>

    <!-- Navigation Drawer -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- Navigation Header -->
    <string name="nav_header_title">Proyecto DAM</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <!-- Items del menu -->
    <string name="action_settings">Ajustes</string>
    <string name="menu_home">Menu principal</string>
    <string name="menu_historial">Historial paciente</string>
    <string name="menu_crear_consulta">Crear consulta</string>
    <string name="menu_editar_paciente">Editar paciente</string>
    <string name="menu_agenda">Agenda</string>
    <string name="menu_crear_paciente">Crear paciente</string>

    <!-- Etiquetas del formulario -->
    <string name="dni_paciente">DNI Paciente</string>
    <string name="nombre_paciente">Nombre paciente</string>
    <string name="fecha_nacimiento">Fecha nacimiento</string>
    <string name="direccion">Direccion</string>
    <string name="telefono">Telefono</string>
    <string name="guardar_paciente">Crear paciente</string>
    <string name="select_user">Usuario</string>
    <string name="buscar_usuario">Introducir DNI del paciente</string>
    <string name="buscar">Buscar</string>
    <string name="username">Nombre de usuario</string>
    <string name="password">Contraseña</string>
    <string name="hint_dni_paciente">Buscar consultas de un paciente</string>
    <string name="fecha_inicio">Fecha inicio</string>
    <string name="fecha_fin">Fecha final</string>
    <string name="filtrar">Filtrar</string>

    <!-- Etiquetas -->
    <string name="historial_de_paciente">Historial de Paciente</string>
    <string name="crear_consulta">Crear Consulta</string>
    <string name="editar_paciente">Editar Paciente</string>
    <string name="agenda">Agenda</string>
    <string name="crear_paciente">Crear Paciente</string>
    <string name="tipo_consulta">Tipo de Consulta</string>
    <string name="descripcion_consulta">Descripcion de la consulta</string>
    <string name="fecha_consulta">Fecha de la consulta</string>
    <string name="login">Login</string>

    <!-- Ajustes -->
    <string name="ajustes">Ajustes</string>
    <string name="notificaciones">Notificaciones</string>
    <string name="permitir_notificaciones">Permitir notificaciones</string>
    <string name="apariencia">Apariencia</string>
    <string name="habilitar_moso_oscuro">Habilitar el modo oscuro</string>
    <string name="editar_perfil">Editar perfil</string>

    <!-- Informacion del Doctor -->
    <string name="dni_medico">DNI medico</string>
    <string name="nombre_medico">Nombre medico</string>
    <string name="especialidad">Especialidad</string>

    <!-- IP -->
    <string name="ip">http://10.0.2.2/api/</string>

    <!-- Mensajes -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>
    <string name="eliminar_paciente">Eliminar paciente</string>

    <!-- String Arrays -->
    <string-array name="estado_consulta_options">
        <item>pendiente</item>
        <item>aceptada</item>
        <item>cancelada</item>
        <item>finalizada</item>
    </string-array>

    <string-array name="estado_consulta_buscar_options">
        <item>Todos</item>
        <item>pendiente</item>
        <item>aceptada</item>
        <item>cancelada</item>
        <item>finalizada</item>
    </string-array>
</resources>
